--- a/Contact.html
+++ b/Contact.html
@@ -9,8 +9,9 @@
 <a href="Menu.html">Menu</a>
 <hr>
 <p> Cont no:987654321</p>
-<a href= "https://brainybrunchcafe@gmail.com">Feedback e-mail</a>
+<p> Email id: brainybrunchcafe@gmail.com</p>
 <p>Location:Banjara hills,Hyderabad</p>
 <a href=https://forms.gle/FXzM9D8Ng7Tahbj1A>Feedback link</a>
 </body>
+
 </html>
